@@ -639,6 +639,17 @@
   doi		= {10.4204/EPTCS.229.10}
 }
 
+@InProceedings{	  jobsmann.06.fmcad,
+  author	= {Barbara Jobstmann and Roderick Bloem},
+  title		= {Optimizations for {LTL} Systhesis},
+  booktitle	= {Proceedings of the 6th International Conference on Formal
+		  Methods in Computer-Aided Design (FMCAD'06)},
+  year		= {2006},
+  month		= nov,
+  publisher	= {IEEE},
+  doi		= {10.1109/FMCAD.2006.22}
+}
+
 @InCollection{	  klein.07.ciaa,
   year		= {2007},
   booktitle	= {Proceedings of the 12th International Conference on the
